# sentiment-analysis

./: .gitignore  README.md
fastapi-server/: Makefile  docker-compose.yml  nginx.conf  pyproject.toml
fastapi-server/app/: main.py
fastapi-server/app/models/: sentiment_model.py
fastapi-server/app/sentiment/: crud.py  models.py  routes.py
fastapi-server/docker/: Dockerfile
fastapi-server/scripts/: docker-build.sh  docker-push.sh
sentiment-api/: Makefile  go.mod  go.sum
sentiment-api/cmd/sentiment-api/: main.go
sentiment-api/docker/: Dockerfile
sentiment-api/internal/sentiment/: dto.go  handler.go  service.go
sentiment-api/router/: router.go
sentiment-api/scripts/: docker-build.sh  docker-run.sh
