[tool.poetry]
name = "fastapi-server"
version = "0.1.0"
description = ""
authors = ["igh9410 <athanasia9410@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.110.3"
SQLAlchemy = "^2.0.29"
pydantic = "^2.7.1"
uvicorn = "^0.29.0"
nltk = "^3.8.1"
transformers = "^4.40.1"
torch = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "python scripts/start.py"